--- a/index.html
+++ b/index.html
@@ -1,1 +1,5 @@
 <h1> Learn FPS game tricks </h1>
+
+<p>
+Hi, this is Timmy, I will share my tricks and experience on FPS games such as CS-Go and Counter Blox. Have fun!
+</p>
